--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,6 @@
            command: sudo /etc/init.d/apache2 start
        - run:
            name: Start tunnel
-           command: sudo lt --port 80 > /home/circleci/localtunnel.log &
+           command: sudo lt --port 80 > /home/circleci/localtunnel.log
+           background: true
+           
