--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@
            background: true
        - run:
            name: Start visual test
-           command: sudo git clone https://github.com/makehero/trakr_circleci.git
+           command: sudo git clone https://github.com/makehero/trakr_circleci.git /home/circleci/trakr_circleci
        - run: cd /home/circleci/trakr_circleci && npm install
        - run: node /home/circleci/trakr_circleci/test.js
        - store_artifacts:
