--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  trakr: trakrtest/web-test@dev:first
+  trakr: trakrtest/web-test@dev:0.0.1
 
 jobs:
   build:
@@ -18,16 +18,16 @@ jobs:
            name: Start apache
            command: sudo /etc/init.d/apache2 start
        - run:
-           name: Clone test integration
-           command: sudo git clone https://github.com/makehero/trakr_circleci.git $HOME/trakr_circleci
-       - run: cd $HOME/trakr_circleci && sudo npm install
-       - run:
            name: Install localtunnel
            command: sudo apt-get update
        - run: sudo apt-get install curl software-properties-common
        - run: curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
        - run: sudo apt-get install nodejs
        - run: sudo npm install -g localtunnel
+       - run:
+           name: Clone test integration
+           command: sudo git clone https://github.com/makehero/trakr_circleci.git $HOME/trakr_circleci
+       - run: cd $HOME/trakr_circleci && sudo npm install
        - run:
            name: Start tunnel
            command: sh $HOME/trakr_circleci/start_tunnel.sh
