--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,9 +32,5 @@ jobs:
            name: Start tunnel
            command: sh $HOME/trakr_circleci/start_tunnel.sh
            background: true
-
-workflows:
-  build-tunnel-test:
-    jobs:
-      - build
-      - trakr/trakr_test
+    trakr_test: trakr/trakr_test
+  
