--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,13 @@
- version: 2
- jobs:
-   build:
-     docker:
-       - image: circleci/php:7.1-apache
+version: 2.1
+
+executors:
+  lamp:
+    docker:
+      - image: circleci/php:7.1-apache
+
+jobs:
+  build:
+     executor: lamp
      environment:
        TRAKR_BASE_ENV: production
      steps:
@@ -11,26 +16,36 @@
            name: Copy project directory to default apache root
            command: sudo cp -R ~/project /var/www/html/
        - run:
+           name: Start apache
+           command: sudo /etc/init.d/apache2 start
+  tunnel-test:
+      executor: lamp
+      steps:
+       - run:
            name: Install localtunnel
            command: sudo apt-get update
        - run: sudo apt-get install curl software-properties-common
        - run: curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
        - run: sudo apt-get install nodejs
        - run: sudo npm install -g localtunnel
-       - run: 
-           name: Start apache
-           command: sudo /etc/init.d/apache2 start
        - run:
            name: Clone test integration
-           command: sudo git clone https://github.com/makehero/trakr_circleci.git /home/circleci/trakr_circleci
-       - run: cd /home/circleci/trakr_circleci && sudo npm install
+           command: sudo git clone https://github.com/makehero/trakr_circleci.git $HOME/trakr_circleci
+       - run: cd $HOME/trakr_circleci && sudo npm install
        - run:
            name: Start tunnel
-           command: sh /home/circleci/trakr_circleci/start_tunnel.sh
+           command: sh $HOME/trakr_circleci/start_tunnel.sh
            background: true
-       - run: 
-           name: Run Trakr test
-           command: node /home/circleci/trakr_circleci/test.js
+        - run:
+          name: Perform test
+          command: BUILD_URL=https://trakr-project-$TRAKR_PROJECT_ID.localtunnel.me node $HOME/trakr_circleci/test.js
        - store_artifacts:
-           path: /home/circleci/trakr_result.log
-      
+           path: $HOME/trakr_result.log
+
+workflows:
+  build-tunnel-test:
+    jobs:
+      - build
+      - tunnel-test:
+          requires:
+            - build
