--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,7 @@ jobs:
   tunnel-test:
       executor: lamp
       steps:
-       - run:
-           name: Install localtunnel
-           command: sudo apt-get update
+       - run: sudo apt-get update
        - run: sudo apt-get install curl software-properties-common
        - run: curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
        - run: sudo apt-get install nodejs
@@ -36,7 +34,7 @@ jobs:
            name: Start tunnel
            command: sh $HOME/trakr_circleci/start_tunnel.sh
            background: true
-        - run:
+       - run:
           name: Perform test
           command: BUILD_URL=https://trakr-project-$TRAKR_PROJECT_ID.localtunnel.me node $HOME/trakr_circleci/test.js
        - store_artifacts:
