--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           name: Perform test
           command: BUILD_URL=https://trakr-project-$TRAKR_PROJECT_ID.localtunnel.me node $HOME/trakr_circleci/test.js
        - store_artifacts:
-           path: $HOME/trakr_result.log
+           path: /home/circleci/trakr_result.log
 
 workflows:
   build-tunnel-test:
