fixing mapping values

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,9 +50,9 @@ workflows:
             - build
       - visual_test:
         steps:
-          trakr/fetch_test
-          trakr/trigger_test:
-            trakr_base_env: production
-            delay_start: 10
+          - trakr/fetch_test
+          - trakr/trigger_test:
+              trakr_base_env: production
+              delay_start: 10
           requires:
             - build
