--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ executors:
 jobs:
   build:
      executor: lamp
+     environment:
+       TUNNEL_PORT: 80
      steps:
        - checkout
        - run:
@@ -19,9 +21,6 @@ jobs:
        - run:
            name: Start apache
            command: sudo /etc/init.d/apache2 start
-  tunnel:
-      executor: lamp
-      steps:
        - run:
            name: Install localtunnel
            command: sudo apt-get update
@@ -52,9 +51,6 @@ workflows:
   build-tunnel-test:
     jobs:
       - build
-      - tunnel:
-          requires:
-            - build
       - test:
           requires:
             - build
